Add YOLO model support for region detection in text extraction
- Introduced command-line arguments for specifying YOLO model, disabling YOLO, and focusing on overlay zones.
- Updated `run_pipeline` and `TextDetector` to accommodate new YOLO functionality.
- Enhanced README with usage instructions for new options.
- Default YOLO model set to 'keremberke/yolov8n-table-extraction' for improved text detection.

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ easyocr>=1.7.0
 torch>=2.0.0
 torchvision>=0.15.0
 
-# Optional: YOLO for text-region detection
-# ultralytics>=8.0.0
+# YOLO for text/overlay region detection
+ultralytics>=8.0.0
 
 # Future: LLM
 # openai>=1.0.0
